--- a/Frontend/TripSync/src/Components/PhotosToSlide/PhotosToSlide.css
+++ b/Frontend/TripSync/src/Components/PhotosToSlide/PhotosToSlide.css
@@ -1,5 +1,20 @@
-.head{
-    margin-top: 50px;
-    margin-left: 30px;
-    margin-bottom: 25px;
-}
+.head {
+    text-align: center;
+    font-size: 2.5rem;
+    color: #333;
+    margin-bottom: 2rem;
+    position: relative;
+    padding-bottom: 0.5rem;
+    margin-top: 3rem;
+  }
+  
+  .head::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 500px;
+    height: 4px;
+    background-color: #4a90e2;
+  }
