--- a/Frontend/TripSync/src/Components/NavbarSignedIn/NavbarSignedIn.css
+++ b/Frontend/TripSync/src/Components/NavbarSignedIn/NavbarSignedIn.css
@@ -2,7 +2,7 @@
     text-decoration: none;
     color: black;
     font-size: 16px;
-    font-weight: 500;
+    /* font-weight: 500; */
     transition: color 0.3s ease;
 }
 
