--- a/Frontend/TripSync/src/Components/Blog/Blog.css
+++ b/Frontend/TripSync/src/Components/Blog/Blog.css
@@ -43,7 +43,7 @@
 
 .cardtitle {
   display: inline;
-  /* margin-left: 50px; */
+  margin-left: 20px;
   /* margin-left: ; */
 }
 
@@ -52,9 +52,11 @@
   /* margin-top: -10px; */
   width: 105px;
   height: 100px;
+  border-radius: 50px;
 }
 
 .date {
+  margin-top: 10px;
   margin-left: 20px;
   font-size: 13.5px;
 }
@@ -75,7 +77,7 @@
   align-items: center;
   justify-content: center;
   transition: 0.3s ease;
-  margin-left: 260px;
+  margin-left: 170px;
 }
 
 .close-icon2::before,
