--- a/Frontend/TripSync/src/pages/Report/Report.css
+++ b/Frontend/TripSync/src/pages/Report/Report.css
@@ -75,3 +75,9 @@
     .flexx{
         display: flex;
     }
+    .messg{
+        color: #fe3737;
+        margin-left: 250px;
+        margin-top: 20px;
+        
+    }
