--- a/Frontend/TripSync/src/pages/register/register.css
+++ b/Frontend/TripSync/src/pages/register/register.css
@@ -51,7 +51,7 @@
     transition: 15ms;
   }
   
-  #profilephoto {
+  #profilephototrv {
     border: 1px solid #ced4da;
     padding: 5px;
     font-size: 14px;
