--- a/Frontend/TripSync/src/Components/Navbar/Navbar.css
+++ b/Frontend/TripSync/src/Components/Navbar/Navbar.css
@@ -16,3 +16,29 @@
     
     color: black;
  }
+ .blogNav,.tripNav,.agnencyNav{
+    cursor: pointer;
+ }
+.popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
+  
+  /* Popup content box */
+  .popup-content {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    width: 300px;
+    text-align: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+  
