--- a/Frontend/TripSync/src/Components/trav-prof/ProfPicture/ProfPicture.css
+++ b/Frontend/TripSync/src/Components/trav-prof/ProfPicture/ProfPicture.css
@@ -9,9 +9,9 @@
   /* align-items: center; */
 }
 
-.profile-picture {
-  width: 250px;
-  height: 250px;
+.travellr-profile-picture {
+  width: 200px;
+  height: 200px;
   border: 4px solid #fff;
   border-radius: 50%;
   overflow: hidden;
@@ -20,13 +20,13 @@
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.profile-picture img {
+.travellr-profile-picture img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.profile-picture:hover {
+.travellr-profile-picture:hover {
   transform: scale(1.1);
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
 }
