--- a/Frontend/TripSync/src/pages/sign_in/sign_in.css
+++ b/Frontend/TripSync/src/pages/sign_in/sign_in.css
@@ -74,7 +74,7 @@
     scale:1.02;
   }
   
-  /* Forget and Reset Password Links */
+ 
   .forgetPassword,
   .ResetPassword {
     background: none;
@@ -110,3 +110,31 @@
     border-radius: 10px;
     background-color: #e8f3fd;
   }
+
+  .btn_success{
+    color: #1bb20d;
+  }
+
+  .popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
+  
+  /* Popup content box */
+  .popup-content {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    width: 300px;
+    text-align: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+  
