--- a/Frontend/TripSync/src/Components/TravelAgencyCard/TravelAgencyCard.css
+++ b/Frontend/TripSync/src/Components/TravelAgencyCard/TravelAgencyCard.css
@@ -10,6 +10,7 @@
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     max-width: 300px;
     margin: 30px auto;
+    cursor: pointer;
   }
   
   .containerAgency:hover {
