--- a/Frontend/TripSync/src/pages/AllAgencies/AllAgencies.css
+++ b/Frontend/TripSync/src/pages/AllAgencies/AllAgencies.css
@@ -22,4 +22,9 @@
     transform: scale(1.02);
     transition: all 0.3s ease;
   }
-  
+  .Nosearch{
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    margin-top: 50px;
+  }
