--- a/Frontend/TripSync/src/Components/trav-prof/Reward/Reward.css
+++ b/Frontend/TripSync/src/Components/trav-prof/Reward/Reward.css
@@ -78,3 +78,26 @@
 }
 
 
+
+
+/* Overlay styling */
+
+.popup-overlay-Reward-container {
+  width: 100vw;
+  height: 100vh;
+  z-index: 1000;
+}
+.popup-overlay-Reward {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+
