--- a/Frontend/TripSync/src/pages/AllAgencies/AllAgencies.css
+++ b/Frontend/TripSync/src/pages/AllAgencies/AllAgencies.css
@@ -13,11 +13,11 @@
     font-size: 25px; 
 }
 
-.agency-card-container {
+.agency-card-container-home {
     cursor: pointer;
   }
   
-  .agency-card-container:hover {
+  .agency-card-container-home:hover {
     background-color: #f0f0f0;
     transform: scale(1.02);
     transition: all 0.3s ease;
