--- a/Frontend/TripSync/src/Components/Admin/editAdmin/AdminEditForm.css
+++ b/Frontend/TripSync/src/Components/Admin/editAdmin/AdminEditForm.css
@@ -5,6 +5,9 @@
     min-height: 100vh;
     background-color: #f4f4f4;
     padding: 20px;
+    width: 75%;
+    position: absolute;
+    right: 0px;
   }
   
   .admin-edit-card {
