--- a/Frontend/TripSync/src/Components/Admin/AllAgenciesList/AllAgenciesList.css
+++ b/Frontend/TripSync/src/Components/Admin/AllAgenciesList/AllAgenciesList.css
@@ -19,6 +19,35 @@
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
+/* Loading Spinner Container */
+.loading-spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px; /* Adjust as needed */
+}
+
+/* Spinner Animation */
+.spinner {
+  border: 4px solid rgba(0, 0, 0, 0.1); /* Light grey border */
+  border-top: 4px solid #007bff; /* Blue border */
+  border-radius: 50%;
+  width: 40px; /* Spinner size */
+  height: 40px; /* Spinner size */
+  animation: spin 1s linear infinite;
+}
+
+/* Spinner Keyframes */
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+
 .agnecy-card-photo {
   width: 80px;
   height: 80px;
