--- a/Frontend/TripSync/src/pages/sign_in/sign_in.css
+++ b/Frontend/TripSync/src/pages/sign_in/sign_in.css
@@ -52,9 +52,9 @@
   } */
   
   /* Labels */
-  .form-label {
+  .form-label-sign-in {
     font-size: 14px;
-    color: #6c757d;
+    color: black;
     margin-bottom: 5px;
   }
   
